# ChangeGuard

./: .gitignore  README.md  pyproject.toml
docs/: ai_boundary.md  change_model.md  contract_model.md  decision_rules.md  demo_transcript.md  limitations.md  project_completion_note.md  resume_summary.md  system_design.md  troubleshooting.md
examples/: demo_workflow.sh
examples/change_requests/: add_discount_column.yml  allow_add_nullable_column.yml  block_rename_required_column.yml  (+3 more)
tests/: test_add_column_change.py  test_change_models.py  test_change_request_yaml.py  test_cli_check_contract.py  test_cli_explain_run.py  test_cli_impact.py  test_cli_init.py  test_cli_propose_audit.py  test_cli_propose_file.py  test_cli_propose_flags.py  test_cli_propose_review.py  test_cli_register_table.py  test_cli_review_run.py  test_cli_runs.py  test_cli_tables_inspect.py  test_column_impact.py  test_contract_check_add_column.py  test_contract_check_drop_column.py  test_contract_check_rename_column.py  test_contract_check_type_nullable.py  test_contract_helpers.py  test_contract_load.py  test_contract_models.py  test_decision_aggregation.py  test_decision_models.py  test_drop_column_migration_plan.py  test_example_change_requests.py  test_explain_review.py  test_imports.py  test_lineage_change_checks.py  test_lineage_downstream.py  test_lineage_load.py  test_lineage_models.py  test_llm_adapter.py  test_load_review_runs.py  test_migration_plan_models.py  test_other_change_types.py  test_phase2_change_requests.py  test_phase3_contract_validation.py  test_phase4_lineage_impact.py  (+24 more)
(+23 files in other folders)
